# armor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  action.yml  build_binary.sh  pytest.ini
.github/workflows/: claude.yml  code-review.yml  qcom-preflight-checks.yml
action_script/: parse_headers.sh  run_armor.sh
include/: header_processor.hpp
src/: header_processor.cpp  main.cpp  options_handler.cpp
src/alpha/: CMakeLists.txt
src/alpha/include/: ast_normalized_context.hpp  astnormalizer.hpp  diffengine.hpp  header_processor.hpp  node.hpp  preprocesor.hpp  session.hpp  tree_builder.hpp
src/alpha/src/: ast_normalized_context.cpp  astnormalizer.cpp  diffengine.cpp  header_processor.cpp  node.cpp  preprocessor.cpp  session.cpp  tree_builder.cpp
src/armor/: CMakeLists.txt
src/armor/include/: git_utils.hpp
src/armor/src/: git_utils.cpp  options_handler.cpp
src/beta/: CMakeLists.txt
src/beta/include/: ast_normalized_context.hpp  astnormalizer.hpp  comment_handler.hpp  diffengine.hpp  header_processor.hpp  node.hpp  preprocesor.hpp  session.hpp  tree_builder.hpp
src/beta/src/: ast_normalized_context.cpp  astnormalizer.cpp  comment_handler.cpp  diffengine.cpp  header_processor.cpp  node.cpp  preprocessor.cpp  session.cpp  tree_builder.cpp
src/common/: CMakeLists.txt
src/common/include/: ast_normalized_context.hpp  categorization.hpp  comm_def.hpp  custom_usr_generator.hpp  debug_config.hpp  diff_utils.hpp  fibonacci_hash.hpp  header_processor_utils.hpp  html_template.hpp  logger.hpp  node.hpp  nsr_generator.hpp  options_handler.hpp  qualified_name_builder.hpp  qualified_name_generator.hpp  report_generator.hpp  report_utils.hpp  session.hpp  tree_builder_utils.hpp  type_utils.hpp  user_print.hpp
src/common/src/: ast_normalized_context.cpp  categorization.cpp  custom_type_printer.cpp  custom_usr_generator.cpp  diff_utils.cpp  fibonacci_hash.cpp  header_processor_utils.cpp  node.cpp  nsr_generator.cpp  qualified_name_builder.cpp  qualified_name_generator.cpp  report_generator.cpp  report_utils.cpp  session.cpp  tree_builder_utils.cpp  type_utils.cpp
src/tests/: __init__.py
src/tests/alpha/: CMakeLists.txt  __init__.py
src/tests/alpha/functional/: __init__.py  conftest.py
src/tests/alpha/functional/anonymous_type_changes/: expected_output.json
src/tests/alpha/functional/enum_changes/: expected_output.json
src/tests/alpha/functional/enum_changes/v1/: mylib.h
src/tests/alpha/functional/fatal_errors/: expected_output.json  test_fatal_errors.py
src/tests/alpha/functional/field_variable_changes/: expected_output.json
src/tests/alpha/functional/function_changes/: __init__.py  expected_output.json  test_alpha_function_changes.py
src/tests/alpha/functional/function_pointer_changes/: expected_output.json  test_alpha_function_pointer_changes.py
src/tests/alpha/functional/sanity/: expected_output.json
src/tests/alpha/functional/struct_changes/: __init__.py  expected_output.json  test_alpha_struct_changes.py
src/tests/alpha/functional/template_changes/: expected_output.json
src/tests/alpha/functional/type_def_changes/: __init__.py  expected_output.json
src/tests/alpha/functional/union_changes/: expected_output.json
src/tests/alpha/src/: CMakeLists.txt  main.cpp  options_handler.cpp
src/tests/armor/functional/: conftest.py
src/tests/armor/functional/alpha_beta_parsing/: expected_output.json  test_alpha_beta_parsing.py
src/tests/armor/functional/alpha_parsing/: expected_output.json  test_alpha_parsing.py
src/tests/armor/functional/cmd_macros_categorisation/: expected_output.json  expected_output.txt  test_cmd_macros_categorisation.py
src/tests/armor/functional/comments_update/: expected_output.json  expected_output.txt
src/tests/armor/functional/cpp_standard/: expected_output.json
src/tests/armor/functional/inactive_code_update/: expected_output.json  expected_output.txt
src/tests/armor/functional/lang_options/: expected_output.json  test_lang_options.py
src/tests/armor/functional/new_decls_categorisation/: expected_output.json  expected_output.txt
src/tests/armor/functional/no_diff_exit_code/: test_no_diff_exit_code.py
src/tests/armor/functional/supported_code_update/: expected_output.json  expected_output.txt
src/tests/armor/functional/unsupported_code_update/: expected_output.json  expected_output.txt
src/tests/armor/functional/whitespace_update/: expected_output.json  expected_output.txt
src/tests/armor/src/: CMakeLists.txt  main.cpp  options_handler.cpp
src/tests/beta/: CMakeLists.txt  __init__.py
src/tests/beta/functional/: __init__.py  conftest.py
src/tests/beta/functional/access_spec_changes/: expected_output.json  test_access_spec_changes.py
src/tests/beta/functional/access_spec_decl_changes/: expected_output.json  expected_output.txt  test_access_spec_decl_changes.py
src/tests/beta/functional/anonymous_type_changes/: expected_output.json
src/tests/beta/functional/canonical_type_changes/: expected_output.json
src/tests/beta/functional/class_changes/: expected_output.json  test_beta_class_changes.py
src/tests/beta/functional/cxx_node_caching/: expected_output.json  test_cxx_node_caching.py
src/tests/beta/functional/enum_changes/: test_beta_enum_changes.py
src/tests/beta/functional/field_init_changes/: expected_output.txt  test_beta_field_init_changes.py
src/tests/beta/functional/field_variable_changes/: expected_output.json
src/tests/beta/functional/flow_cxx_adv_template_categorisation/: expected_output.json  expected_output.txt  test_adv_template_categorisation.py
src/tests/beta/functional/flow_cxx_categorisation/: expected_output.json  expected_output.txt
src/tests/beta/functional/flow_cxx_edge_categorisation/: expected_output.json  expected_output.txt
src/tests/beta/functional/flow_cxx_forward_decl_categorisation/: expected_output.json  expected_output.txt
src/tests/beta/src/: CMakeLists.txt  options_handler.cpp
src/tests/common/: CMakeLists.txt
src/tests/common/unit/: test_categorization.cpp  test_categorization_reason.cpp  test_common.py
(+103 files in other folders)
